[Fixed checkbox alignment issue on customer account create page]

--- a/app/design/frontend/Magento/blank/Magento_Customer/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Customer/web/css/source/_module.less
@@ -80,6 +80,17 @@
         }
     }
 
+    .form-create-account {
+        .fieldset.create.info {
+            .choice.newsletter {
+                input.checkbox {
+                    margin: 0 5px 0 0;
+                    vertical-align: top;
+                }
+            }
+        }
+    }
+
     .box-billing-address,
     .box-shipping-address,
     .box-information,
