--- a/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
@@ -93,6 +93,14 @@
                 }
             }
         }
+        .fieldset.create.info {
+            .choice.newsletter {
+                input.checkbox {
+                    margin: 0 5px 0 0;
+                    vertical-align: top;
+                }
+            }
+        }
         .fieldset.create.account {
             .lib-form-hasrequired(bottom);
             &:after {
